// Tabla de Usuarios
Table users {
  id_user integer [primary key, increment]
  username varchar [unique, not null]
  password_hash varchar [not null]
  streak integer [default: 0]
  last_completion_at integer
  xp integer [default: 0]
  current_outfit_id integer [note: 'Item que trae puesto']
}

Table sessions {
  id_session integer [primary key, increment]
  user_id integer
  token_hash integer
  created_at timestamp
  expires_at timestamp
}

// Catálogo de ítems estéticos
Table outfits {
  id_outfit integer [primary key, increment]
  name varchar [not null]
  cost integer [not null]
  description varchar
  tagline varchar
  image varchar
}

// Relación N:M entre Usuario y Vestuario (Inventario)
Table user_outfits {
  id_user integer
  id_outfit integer
  unlocked_at timestamp
  
  indexes {
    (id_user, id_outfit) [pk]
  }
}

Table routes {
  id_route integer [primary key, increment]
  name varchar(100)
  order_index int [unique]
  background_image varchar(100)

  // Insignia asociada a completar esta ruta
  badge_name varchar(100)
  badge_description varchar
  badge_image varchar(100)
}

Table user_route_badges {
  id_user integer
  id_route integer
  unlocked_at timestamp

  indexes {
    (id_user, id_route) [pk]
  }
}


// Estructura de niveles del juego
Table levels {
  id_level integer [primary key, increment]
  id_route integer 
  route_order integer
  name varchar(12)
  difficulty varchar(12)
  content varchar(20)
}

// Banco de ejercicios
Table exercises {
  id_exercise integer [primary key, increment]
  id_level integer [unique]
  type varchar(20)
  prompt varchar(100)
  content_data varchar
  answer_data varchar
  order_index int
}

/* Opciones para ejercicios de opción múltiple (Normalización 1FN)
Table Opcion_Ejercicio {
  id_opcion integer [primary key, increment]
  id_ejercicio integer
  texto_opcion text
}
*/

// Relaciones y Restricciones (FK)

Ref: user_route_badges.id_user > users.id_user [delete: cascade, update: cascade]
Ref: user_route_badges.id_route > routes.id_route [delete: cascade, update: cascade]


// Un usuario puede equipar un item de su inventario
Ref: users.current_outfit_id > outfits.id_outfit [delete: set null, update: cascade]

// Un usuario puede tener varias sesiones a lo largo del tiempo
Ref: sessions.user_id > users.id_user

// Relación ruta - nivel (1:N)
Ref: levels.id_route > routes.id_route [delete: cascade]

// Relación Compra (N:M)
Ref: user_outfits.id_user > users.id_user [delete: cascade, update: cascade]
Ref: user_outfits.id_outfit > outfits.id_outfit [delete: cascade, update: cascade]

/* Relación Juega/Progreso (N:M)
Ref: Progreso_Nivel.id_usuario > Usuario.id_usuario [delete: cascade, update: cascade]
R*/

// Un nivel contiene muchos ejercicios (1:N)
Ref: exercises.id_level > levels.id_level [delete: cascade, update: cascade]

// Un ejercicio puede tener muchas opciones (1:N)
//Ref: Opcion_Ejercicio.id_ejercicio > exercises.id_exercise [delete: cascade, update: cascade]